@startuml

class MealFrame {
  + start(Stage stage) : void
}
class MealFormFrame {
  + start(Stage stage) : void
}
class MealInfoFrame {
  + start(Stage stage) : void
}

class Application {
  + start(Stage stage) : void
  + launch(String[] tab) : void
}

class MealController {
  + initialize(URL url, ResourceBundle resourceBundle) : void
  - selection() : void
  - switchToCreateFrame(ActionEvent event) : void
  - switchToInfoFrame(ActionEvent event) : void
}
class MealInfoController {
  + initialize(URL url, ResourceBundle resourceBundle) : void
  + delete(ActionEvent event) : void
  - switchToUpdateFrame(ActionEvent event) : void
  - go_back(ActionEvent event) : void
}
class MealFormController {
  + initialize(URL url, ResourceBundle resourceBundle) : void
  + submit_modification(ActionEvent event) : void
  + update() : void
  + create() : void
  + switchToMealFrame() : void
}

class MealFacade{
  - MealDAO mealDAO
  - OpinionDAO opinionDAO
  + update(Meal meal) : Boolean
  + delete(int idMeal) : Boolean
  + create(Meal meal) : Boolean
  + getAllMeal() : List<Meal>
  + getAllOpinionOfMeal(int idMeal) : List<Opinion>
  + getById(int idMeal) : Meal
  + getInstance() : MealFacade
}

class Meal{
  - idMeal : Int
  - idRestaurant : Int
  - title : String
  - description : String
  - price : Float
}


abstract class AbstractDAOFactory{
  + getMealDAO() : MealDAO
  + getOpinionDAO() : OpinionDAO
  + getInstance() : AbstractDAOFactory
}

class PostGresDAOFactory{
  -ConnectionPostgres : ConnectionPostgres
}

class PostGresMealDAO{}


abstract class MealDAO{
  + update(Meal meal) : Boolean
  + delete(int idMeal) : Boolean
  + create(Meal meal) : Boolean
  + getAllMeal() : List<Meal>
  + getById(int idMeal) : Meal
}

class ConnectionPostgres{
  - url : String
  - user : String
  - password : String
  + getConnection() : Connection
}

class LocalStorage{
 + write(String key,Object value) : void
 + load(String key) : Object
}

Application <|-- MealFrame
Application <|-- MealFormFrame
Application <|-- MealInfoFrame

MealController -> MealFacade
MealController -> Meal
MealInfoController -> MealFacade
MealInfoController -> Meal
MealFormController -> MealFacade
MealFormController -> Meal

MealController --> LocalStorage
MealInfoController --> LocalStorage
MealFormController --> LocalStorage


MealFormFrame -- MealFormController
MealInfoFrame -- MealInfoController
MealFrame -- MealController


MealFacade --> Meal
MealFacade -> MealDAO
MealFacade -> AbstractDAOFactory

AbstractDAOFactory <|-- PostGresDAOFactory
MealDAO <|-- PostGresMealDAO
PostGresDAOFactory --> ConnectionPostgres
PostGresDAOFactory -> PostGresMealDAO
AbstractDAOFactory -> MealDAO
MealDAO -> Meal
@enduml

